# Voxualize

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt
Data/: File_Information.txt
include/: data_cube.h
protos/: helloworld.proto
src/: CMakeLists.txt  Voxualize.cpp  Voxualize.cxx  data_cube.cxx  greeter_server.cxx  voxualize_server.cxx
